# utility-library

./: .gitignore  CMakeLists.txt  README.md
include/: menu.hpp  rand.hpp  scanner.hpp  string_utility.hpp  timer.hpp
src/: delimiters.cpp  menu.cpp  scanner.cpp  string_utility.cpp
